Tests/CompilerTests/negative/empty-initialization.expected
negative/empty-initialization.hylo:7.40: error: 'set' parameter not initialized before exit
fun illegal<T, U>(xs: set {T, ...U}) {}
                                       ^
